--- a/src/AutSoft.DbScaffolding/CodeTemplates/CSharpDbContext/Partials/DbSets.hbs
+++ b/src/AutSoft.DbScaffolding/CodeTemplates/CSharpDbContext/Partials/DbSets.hbs
@@ -1,3 +1,3 @@
 ﻿{{#each dbsets}}
-        public virtual DbSet<{{set-property-type}}> {{set-property-name}} { get; set; }{{#if nullable-reference-types }} = null!;{{/if}}
+        public virtual DbSet<{{set-property-type}}> {{set-property-name}} {{#if nullable-reference-types }}=> Set<{{set-property-type}}>();{{else}}{ get; set; }{{/if}}
 {{/each}}
