--- a/src/AutSoft.DbScaffolding/CodeTemplates/CSharpInterface/Interface.hbs
+++ b/src/AutSoft.DbScaffolding/CodeTemplates/CSharpInterface/Interface.hbs
@@ -13,6 +13,8 @@ namespace {{namespace}}
 {
     public interface {{interface}}
     {
-{{{> properties}}}
+{{#each properties}}
+        public {{property-type}} {{property-name}} { get; set; }
+{{/each}}
     }
 }
