--- a/src/AutSoft.AspNetCore.Blazor/DataField/DataField.razor
+++ b/src/AutSoft.AspNetCore.Blazor/DataField/DataField.razor
@@ -1,6 +1,6 @@
 <MudItem xxl="LabelXxl" xl="LabelXl" lg="LabelLg" md="LabelMd" sm="LabelSm" xs="LabelXs" Class="d-flex align-center">
-    <MudText Typo="Typo.caption" Class="text-uppercase text-bold">@Label</MudText>
+    <MudText Typo="Typo.caption" Class="datafield-label">@Label</MudText>
 </MudItem>
 <MudItem xxl="ValueXxl" xl="ValueXl" lg="ValueLg" md="ValueMd" sm="ValueSm" xs="ValueXs">
-    <MudText Typo="Typo.body1" Class="text-overflow-ellipsis">@ChildContent</MudText>
+    <MudText Typo="Typo.body1" Class="datafield-value">@ChildContent</MudText>
 </MudItem>
