--- a/src/AutSoft.AspNetCore.Blazor/Filter/FilterRoot.razor
+++ b/src/AutSoft.AspNetCore.Blazor/Filter/FilterRoot.razor
@@ -2,6 +2,7 @@
 @using MudBlazor
 @typeparam T
 @inherits MudComponentBase
+@inject Blazor.Localization.BlazorComponentLocalizer Localizer
 
 <div class="@Classname">
     @if (FilterContent != null)
@@ -13,7 +14,7 @@
                         <MudBadge Content="@_filterCount" Overlap="true" Bordered="true" Visible="@(_filterCount > 0)">
                             <MudIcon Icon="@Icons.Material.Filled.FilterAlt" />
                         </MudBadge>
-                        <MudText Typo="Typo.h6">Filter</MudText>
+                        <MudText Typo="Typo.h6">@Localizer.FilterRootHeaderTitle</MudText>
                     </div>
                 </TitleContent>
                 <ChildContent>
@@ -23,10 +24,10 @@
                         </div>
                         <div class="d-flex flex-md-column justify-center flex-lg-row align-lg-center gap-4 gap-lg-8 ml-0 ml-md-4">
                             <MudButton Class="filter-button mr-md-0 ml-md-auto" Color="Color.Primary" Variant="Variant.Filled" OnClick="FilterAsync">
-                                Refresh
+                                @Localizer.FilterRootRefreshButtonLabel
                             </MudButton>
                             <MudButton Class="filter-button mr-0 ml-auto ml-md-0" Color="Color.Secondary" Variant="Variant.Text" OnClick="ResetAsync" StartIcon="@Icons.Material.Filled.FilterAltOff">
-                                Reset
+                                @Localizer.FilterRootResetButtonLabel
                             </MudButton>
                         </div>
                     </MudForm>
