Refactor dialog component

--- a/src/AutSoft.AspNetCore.Blazor/Dialog/Confirm/ConfirmDialog.razor
+++ b/src/AutSoft.AspNetCore.Blazor/Dialog/Confirm/ConfirmDialog.razor
@@ -1,4 +1,4 @@
-@inherits DialogComponentBase<ConfirmDialogParameters, bool>
+@inherits DialogComponentBaseTParameterTResult<ConfirmDialogParameters, bool>
 @inject Blazor.Localization.BlazorComponentLocalizer Localizer
 
 <MudDialog>
