Refactor loading component

--- a/src/AutSoft.AspNetCore.Blazor/Loading/ErrorDialog.razor
+++ b/src/AutSoft.AspNetCore.Blazor/Loading/ErrorDialog.razor
@@ -1,5 +1,5 @@
 @using AutSoft.AspNetCore.Blazor.ErrorHandling
-@inherits Dialog.DialogComponentBase<ErrorDialogParameter>
+@inherits Dialog.DialogComponentBaseTParameter<ErrorDialogParameter>
 @inject Blazor.Localization.BlazorComponentLocalizer Localizer
 
 <div class="error-dialog-root">
