Change tabs to space in error card

--- a/src/AutSoft.AspNetCore.Blazor/ErrorHandling/ErrorCard.razor
+++ b/src/AutSoft.AspNetCore.Blazor/ErrorHandling/ErrorCard.razor
@@ -1,10 +1,10 @@
-﻿<MudCard>
-	<MudCardHeader>
-		<CardHeaderContent>
-			<MudText Class="text-center" Typo="Typo.h5">@Title</MudText>
-		</CardHeaderContent>
-	</MudCardHeader>
-	<MudCardContent>
-		<MudText Typo="Typo.body1">@Message</MudText>
-	</MudCardContent>
+<MudCard>
+    <MudCardHeader>
+        <CardHeaderContent>
+            <MudText Class="text-center" Typo="Typo.h5">@Title</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
+        <MudText Typo="Typo.body1">@Message</MudText>
+    </MudCardContent>
 </MudCard>
