Change datafield typography to body

--- a/src/AutSoft.Mud.Blazor/DataField/DataField.razor
+++ b/src/AutSoft.Mud.Blazor/DataField/DataField.razor
@@ -2,5 +2,5 @@
     <MudText Typo="Typo.caption" Class="datafield-label">@Label</MudText>
 </MudItem>
 <MudItem xxl="ValueXxl" xl="ValueXl" lg="ValueLg" md="ValueMd" sm="ValueSm" xs="ValueXs">
-    <MudText Typo="Typo.h1" Class="datafield-value">@ChildContent</MudText>
+    <MudText Typo="Typo.body1" Class="datafield-value">@ChildContent</MudText>
 </MudItem>
