Rename dialog component classes

--- a/src/AutSoft.Mud.Blazor/Dialog/Confirm/ConfirmDialog.razor
+++ b/src/AutSoft.Mud.Blazor/Dialog/Confirm/ConfirmDialog.razor
@@ -1,4 +1,4 @@
-@inherits DialogComponentBaseTParameterTResult<ConfirmDialogParameters, bool>
+@inherits DialogComponentBase<ConfirmDialogParameters, bool>
 @inject BlazorComponentLocalizer Localizer
 
 <MudDialog>
