--- a/src/AutSoft.Mud.Blazor/Dialog/Error/ErrorDialog.razor
+++ b/src/AutSoft.Mud.Blazor/Dialog/Error/ErrorDialog.razor
@@ -1,5 +1,5 @@
 @using AutSoft.Mud.Blazor.ErrorHandling
-@inherits Dialog.DialogComponentBaseTParameter<ErrorDialogParameter>
+@inherits Dialog.DialogComponentBase<ErrorDialogParameter>
 @inject BlazorComponentLocalizer Localizer
 
 <div class="error-dialog-root">
